--- a/about-me.html
+++ b/about-me.html
@@ -14,8 +14,8 @@
       <div class="container-fluid">
         <div id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="./index.html">Home <span class="sr-only">(current)</span></a></li>
-            <li><a href="./about-me.html">About Me</a></li>
+            <li><a href="./index.html">Home </a></li>
+            <li class="active"><a href="./about-me.html">About Me<span class="sr-only">(current)</span></a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
