--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="cBU4rIF2y8qKgDW_mSGHgB9Ojr-0J6ixMo-mTaVIJk8" />
     <title>Arpit Choudhary</title>
     <link rel=icon href=favicon.png>
     <link href="css/bootstrap.min.css" rel="stylesheet">
