--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
                         <a href="https://www.quora.com/profile/Arpit-Choudhary-10"><img src="img/q.png" height="32" width="32">
                         </a>
                       </td>
+                      <td>
+                        <a href="https://t.me/appi147"><img src="img/tg.png" height="32" width="32">
+                        </a>
+                      </td>
+                      <td>
+                        <a href="mailto:arpitkumar147@gmail.com"><img src="img/mail.png" height="32" width="32">
+                        </a>
+                      </td>
                     </tr>
                     </tbody>
                 </table>
