--- a/eggs/matrix.html
+++ b/eggs/matrix.html
@@ -1,50 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-		<title>Matrix</title>
-		<link rel=icon href=favicon.ico>
-	</head>
-	<body style=margin:0>
-		<div>
-			<canvas id="q">Sorry Browser Won't Support</canvas>
-		</div>
-			<script>
-				$(document).ready(function(){
-					var s=window.screen;
-					var width = q.width=s.width;
-					var height = q.height=s.height;
-					var yPositions = Array(300).join(0).split('');
-					var ctx=q.getContext('2d');
-					var draw = function (){
-						ctx.fillStyle='rgba(0,0,0,.05)';
-						ctx.fillRect(0,0,width,height);
-						ctx.fillStyle='#0F0';
-						ctx.font = '10pt Georgia';
-						yPositions.map(function(y, index){
-						    text = String.fromCharCode(1e2+Math.random()*33);
-						    x = (index * 10)+10;
-						    q.getContext('2d').fillText(text, x, y);
-							if(y > 100 + Math.random()*1e4){
-								yPositions[index]=0;
-							}
-							else{
-						    	yPositions[index] = y + 10;
-							}
-				  		});
-					};
-					RunMatrix();
-					function RunMatrix()
-					{
-						if(typeof Game_Interval != "undefined")
-							clearInterval(Game_Interval);
-						Game_Interval = setInterval(draw, 33);
-					}
-				})
-			</script>
-
-</body></html>
-<!--Source: http://www.arungudelli.com/html5/matrix-effect-using-html5-and-javascript/ 
-modified a little 
--->
+<head> <title> matrix-reloaded </title> <link rel=icon href=favicon.ico></head>
+<body style=margin:0 />
+<canvas id=q />
+<script>
+	var q=document.getElementById('q'),
+	s=window.screen,
+	w=q.width=s.width,
+	h=q.height=s.height,
+	p=Array(256).join(1).split(''),
+	c=q.getContext('2d'),
+	m=Math;setInterval(function(){
+		c.fillStyle='rgba(0,0,0,0.05)';
+		c.fillRect(0,0,w,h);
+		c.fillStyle='rgba(0,255,0,1)';
+		p=p.map(function(v,i){
+			r=m.random();
+			c.fillText(String.fromCharCode(m.floor(2720+r*33)),i*10,v);v+=10; return v>768+r*1e4?0:v
+		})
+	},33)
+</script>
+<!--Source: Don't know was saved in my bookmark. Thank You-->
