--- a/404.html
+++ b/404.html
@@ -10,17 +10,14 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/cover.css" rel="stylesheet">
     <link href="css/hover.css" rel="stylesheet">
-
+	<link href="css/bg.css" rel="stylesheet">
   </head>
 
   <body>
 
     <div class="site-wrapper">
-
       <div class="site-wrapper-inner">
-
         <div class="cover-container">
-
           <div class="masthead clearfix">
             <div class="inner">
               <h3 class="masthead-brand">Arpit Choudhary</h3>
@@ -53,10 +50,10 @@
                         <a href="http://github.com/appi147"><img src="img/gh.png" height="32" width="32">
                         </a>
                       </td>
-                      <td>
+                      <!--<td>
                         <a href="https://codechef.com/users/arpit147"><img src="img/cc.gif" height="32" width="32">
                         </a>
-                      </td>
+                      </td>-->
                       <td>
                         <a href="https://appiblogs.wordpress.com/"><img src="img/wp.png" height="32" width="32">
                         </a>
