--- a/eggs/matrix.html
+++ b/eggs/matrix.html
@@ -1,4 +1,4 @@
-<head> <title> matrix-reloaded </title> <link rel=icon href=favicon.ico></head>
+<head> <title> matrix </title> <link rel=icon href=../favicon/matrix.ico></head>
 <body style=margin:0 />
 <canvas id=q />
 <script>
