--- a/index.html
+++ b/index.html
@@ -6,42 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="cBU4rIF2y8qKgDW_mSGHgB9Ojr-0J6ixMo-mTaVIJk8" />
     <title>Arpit Choudhary</title>
-    <link rel=icon href=favicon.png>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel=icon href=favicon/index.png>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link href="css/cover.css" rel="stylesheet">
-    <link href="css/hover.css" rel="stylesheet">
-    <link href="css/bg.css" rel="stylesheet">
+    <link href="css/me.css" rel="stylesheet">
   </head>
-
   <body>
-
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
         <div class="cover-container">
           <div class="masthead clearfix">
             <div class="inner">
               <h3 class="masthead-brand">Arpit Choudhary</h3>
-              <nav class="honav">
+              <nav class="hovtop">
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="index.html">Home</a></li>
-                  <!--<li><a href="about-me.html">About Me</a></li>-->
                 </ul>
               </nav>
             </div>
           </div>
-
           <div class="inner cover">
             <h1 class="cover-heading">Hello there!</h1>
             <p class="lead">
-            	My name is Arpit Choudhary.
-            	<br>I am an undergraduate at NIT Raipur.
-            	<br>My hobbies are coding, blogging, surfing and developing.
+            		My name is Arpit Choudhary.<br>I am an undergraduate at NIT Raipur.<br>My hobbies are coding, blogging, surfing and developing.
             </p>
           </div>
-
           <div class="mastfoot">
             <div class="inner">
-                <table class="table ho1">
+                <table class="table hov">
                   <tbody>
                     <tr>
                       <td>
@@ -52,10 +45,6 @@
                         <a href="http://github.com/appi147"><img src="img/gh.png" height="32" width="32">
                         </a>
                       </td>
-                      <!--<td>
-                        <a href="https://codechef.com/users/arpit147"><img src="img/cc.gif" height="32" width="32">
-                        </a>
-                      </td>congrats you found it-->
                       <td>
                         <a href="https://appiblogs.wordpress.com/"><img src="img/wp.png" height="32" width="32">
                         </a>
@@ -81,12 +70,8 @@
                 </table>
             </div>
           </div>
-
         </div>
-
       </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
