--- a/404.html
+++ b/404.html
@@ -1,90 +1,25 @@
-<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="google-site-verification" content="cBU4rIF2y8qKgDW_mSGHgB9Ojr-0J6ixMo-mTaVIJk8" />
-    <title>Arpit Choudhary</title>
-    <link rel=icon href=favicon.png>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/cover.css" rel="stylesheet">
-    <link href="css/hover.css" rel="stylesheet">
-	<link href="css/bg.css" rel="stylesheet">
-  </head>
-
-  <body>
-
-    <div class="site-wrapper">
-      <div class="site-wrapper-inner">
-        <div class="cover-container">
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">Arpit Choudhary</h3>
-              <nav class="honav">
-                <ul class="nav masthead-nav">
-                  <li class="active"><a href="index.html">Home</a></li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-
-          <div class="inner cover">
-            <h1 class="cover-heading">404</h1>
-            <p class="lead">
-            	<h3>page not found</h3>
-              <a href="index.html" class="btn btn-lg btn-default">Go Home</a>
-            </p>
-          </div>
-
-          <div class="mastfoot">
-            <div class="inner">
-                <table class="table ho1">
-                  <tbody>
-                    <tr>
-                      <td>
-                        <a href="https://facebook.com/appi147"><img src="img/fb.png" height="32" width="32">
-                        </a>
-                      </td>
-                      <td>
-                        <a href="http://github.com/appi147"><img src="img/gh.png" height="32" width="32">
-                        </a>
-                      </td>
-                      <!--<td>
-                        <a href="https://codechef.com/users/arpit147"><img src="img/cc.gif" height="32" width="32">
-                        </a>
-                      </td>-->
-                      <td>
-                        <a href="https://appiblogs.wordpress.com/"><img src="img/wp.png" height="32" width="32">
-                        </a>
-                      </td>
-                      <td>
-                        <a href="https://in.linkedin.com/in/arpitchoudhary147"><img src="img/in.png" height="32" width="32">
-                        </a>
-                      </td>
-                      <td>
-                        <a href="https://www.quora.com/profile/Arpit-Choudhary-10"><img src="img/q.png" height="32" width="32">
-                        </a>
-                      </td>
-                      <td>
-                        <a href="https://t.me/appi147"><img src="img/tg.png" height="32" width="32">
-                        </a>
-                      </td>
-                      <td>
-                        <a href="mailto:arpitkumar147@gmail.com"><img src="img/mail.png" height="32" width="32">
-                        </a>
-                      </td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
+<head>
+  <title>Page Not Found</title>
+  <link rel=icon href=favicon/404.png>
+</head>
+<body style=margin:0 />
+<canvas id=q />
+<script>
+	var q=document.getElementById('q'),
+	s=window.screen,
+	w=q.width=s.width,
+	h=q.height=s.height,
+	p=Array(256).join(1).split(''),
+	c=q.getContext('2d'),
+	m=Math;
+	setInterval(function(){
+		c.fillStyle='rgba(0,0,0,0.05)';
+		c.fillRect(0,0,w,h);
+		c.fillStyle='rgba(0,255,0,1)';
+		p=p.map(function(v,i){
+			r=m.random();
+			c.fillText(404,i*15,v);v+=13; return v>h+r*5e4?0:v
+		})
+	},33)
+</script>
