--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="css/cover.css" rel="stylesheet">
     <link href="css/me.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="bgme">
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
         <div class="cover-container">
@@ -21,7 +21,7 @@
               <h3 class="masthead-brand">Arpit Choudhary</h3>
               <nav class="hovtop">
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="index.html">Home</a></li>
+                  <li class="active"><a href="">Home</a></li>
                 </ul>
               </nav>
             </div>
@@ -38,31 +38,31 @@
                   <tbody>
                     <tr>
                       <td>
-                        <a href="https://facebook.com/appi147"><img src="img/fb.png" height="32" width="32">
+                        <a href="https://facebook.com/appi147" data-toggle="tooltip" data-placement="bottom" title="Facebook"><img src="img/fb.png" height="32" width="32">
                         </a>
                       </td>
                       <td>
-                        <a href="http://github.com/appi147"><img src="img/gh.png" height="32" width="32">
+                        <a href="http://github.com/appi147" data-toggle="tooltip" data-placement="bottom" title="Github"><img src="img/gh.png" height="32" width="32">
                         </a>
                       </td>
                       <td>
-                        <a href="https://appiblogs.wordpress.com/"><img src="img/wp.png" height="32" width="32">
+                        <a href="https://appiblogs.wordpress.com/" data-toggle="tooltip" data-placement="bottom" title="WordPress Blog"><img src="img/wp.png" height="32" width="32">
                         </a>
                       </td>
                       <td>
-                        <a href="https://in.linkedin.com/in/arpitchoudhary147"><img src="img/in.png" height="32" width="32">
+                        <a href="https://in.linkedin.com/in/arpitchoudhary147" data-toggle="tooltip" data-placement="bottom" title="LinkedIn"><img src="img/in.png" height="32" width="32">
                         </a>
                       </td>
                       <td>
-                        <a href="https://www.quora.com/profile/Arpit-Choudhary-10"><img src="img/q.png" height="32" width="32">
+                        <a href="https://www.quora.com/profile/Arpit-Choudhary-10" data-toggle="tooltip" data-placement="bottom" title="Quora"><img src="img/q.png" height="32" width="32">
                         </a>
                       </td>
                       <td>
-                        <a href="https://t.me/appi147"><img src="img/tg.png" height="32" width="32">
+                        <a href="https://t.me/appi147" data-toggle="tooltip" data-placement="bottom" title="Telegram"><img src="img/tg.png" height="32" width="32">
                         </a>
                       </td>
                       <td>
-                        <a href="mailto:arpitkumar147@gmail.com"><img src="img/mail.png" height="32" width="32">
+                        <a href="mailto:arpitkumar147@gmail.com" data-toggle="tooltip" data-placement="bottom" title="Send Mail"><img src="img/mail.png" height="32" width="32">
                         </a>
                       </td>
                     </tr>
