--- a/assistant.html
+++ b/assistant.html
@@ -4,37 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="google-site-verification" content="cBU4rIF2y8qKgDW_mSGHgB9Ojr-0J6ixMo-mTaVIJk8" />
-    <meta name="description" content="Homepage of Arpit Choudhary">
     <meta name="author" content="Arpit Choudhary">
-    <title>Arpit Choudhary</title>
+    <title>appiassist</title>
     <link rel=icon href=favicon/index.png>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link href="css/cover.css" rel="stylesheet">
     <link href="css/me.css" rel="stylesheet">
-    <script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-	  ga('create', 'UA-101778534-1', 'auto');
-	  ga('send', 'pageview');
-	</script>
-	<!-- Google Tag Manager -->
-	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-		})(window,document,'script','dataLayer','GTM-PZ4D6G8');
-	</script>
-	<!-- End Google Tag Manager -->
   </head>
   <body class="bgme">
-  <!-- Google Tag Manager (noscript) -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PZ4D6G8"
-	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-	<!-- End Google Tag Manager (noscript) -->
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
         <div class="cover-container">
@@ -43,7 +21,8 @@
               <h3 class="masthead-brand">Arpit Choudhary</h3>
               <nav class="hovtop">
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="">Home</a></li>
+                  <li><a href="https://appi147.github.io/">Home</a></li>
+                  <li class="active"><a href="#">Assistant</a></li>
                 </ul>
               </nav>
             </div>
@@ -51,7 +30,7 @@
           <div class="inner cover">
             <h1 class="cover-heading">Hello there!</h1>
             <p class="lead">
-            		My name is Arpit Choudhary.<br>I am an undergraduate at NIT Raipur.<br>My hobbies are coding, blogging, surfing and developing.
+            		appiassist is a chatbot which replies instantly on Facebook Messenger. It is under development. To become a tester or a contributor, contect me.
             </p>
           </div>
           <div class="mastfoot">
@@ -91,17 +70,9 @@
                     </tbody>
                 </table>
             </div>
-            <!--
-            <div class="container site-footer-container row">
-            <div class="col-sm-8"></div>
-            <div class="col-sm-4">
-                <a href="#" style="font-size:30%">Feedback</a></div>
-            </div>
-            </div>-->
         </div>
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   </body>
 </html>
-<!-- https://appi147.github.io/assistant.html -->
