--- a/assistant.html
+++ b/assistant.html
@@ -30,7 +30,7 @@
           <div class="inner cover">
             <h1 class="cover-heading">Hello there!</h1>
             <p class="lead">
-            		appiassist is a chatbot which replies instantly on Facebook Messenger. It is under development. To become a tester or a contributor, contect me.
+            		appiassist is a chatbot which replies instantly on Facebook Messenger. It is under development. To become a tester or a contributor, contact me.
             </p>
           </div>
           <div class="mastfoot">
