--- a/js30/drumpad/index.html
+++ b/js30/drumpad/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>DrumPad</title>
-  <link rel="stylesheet" href="css/drumpad.css">
+  <link rel="stylesheet" href="drumpad.css">
 </head>
 
 <body>
@@ -46,17 +46,17 @@
     </div>
   </div>
 
-  <audio data-key="81" src="audio/drumpad/crash.wav"></audio>
-  <audio data-key="80" src="audio/drumpad/shaker.wav"></audio>
-  <audio data-key="65" src="audio/drumpad/clap.wav"></audio>
-  <audio data-key="83" src="audio/drumpad/hihat.wav"></audio>
-  <audio data-key="68" src="audio/drumpad/kick.wav"></audio>
-  <audio data-key="70" src="audio/drumpad/openhat.wav"></audio>
-  <audio data-key="71" src="audio/drumpad/boom.wav"></audio>
-  <audio data-key="72" src="audio/drumpad/ride.wav"></audio>
-  <audio data-key="74" src="audio/drumpad/snare.wav"></audio>
-  <audio data-key="75" src="audio/drumpad/tom.wav"></audio>
-  <audio data-key="76" src="audio/drumpad/tink.wav"></audio>
+  <audio data-key="81" src="crash.wav"></audio>
+  <audio data-key="80" src="shaker.wav"></audio>
+  <audio data-key="65" src="clap.wav"></audio>
+  <audio data-key="83" src="hihat.wav"></audio>
+  <audio data-key="68" src="kick.wav"></audio>
+  <audio data-key="70" src="openhat.wav"></audio>
+  <audio data-key="71" src="boom.wav"></audio>
+  <audio data-key="72" src="ride.wav"></audio>
+  <audio data-key="74" src="snare.wav"></audio>
+  <audio data-key="75" src="tom.wav"></audio>
+  <audio data-key="76" src="tink.wav"></audio>
 
 <script>
   function removeTransition(e) {
