Add JS CSS clock
javascript30.com
2nd exercise

basic deifference change clock hands for h, m, s

Add in js30/

--- a/js30/index.html
+++ b/js30/index.html
@@ -1,1 +1,3 @@
 <a href="https://javascript30.com">JS30</a>
+<li><a href="drumpad/index.html">DrumPad</a></li>
+<li><a href="clock/index.html">Clock</a></li>
