Add konami code
type secret code to change background color to random color

--- a/js30/index.html
+++ b/js30/index.html
@@ -1,3 +1,5 @@
 <a href="https://javascript30.com">JS30</a>
 <li><a href="drumpad/index.html">DrumPad</a></li>
 <li><a href="clock/index.html">Clock</a></li>
+<li><a href="konami/index.html">Konami</a></li>
+<li><a href="flexbox/index.html">Flexbox</a></li>
