--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="inner cover">
             <h1 class="cover-heading">Hello there!</h1>
             <p class="lead">
-            		My name is Arpit Choudhary.<br>I am an undergraduate at NIT Raipur.<br>My hobbies are coding, blogging, surfing and developing.
+            		My name is Arpit Choudhary.<br>I am a Software Engineer at Optum.<br>My hobbies are coding, blogging, surfing and developing.
             </p>
           </div>
           <div class="mastfoot">
